--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String", "BASE_IMAGE_URL", "\"https://image.tmdb.org/t/p/w500/\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -45,6 +46,8 @@ dependencies {
     api 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     api 'androidx.navigation:navigation-ui-ktx:2.4.1'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'com.github.bumptech.glide:glide:4.13.0'
+    api 'com.facebook.shimmer:shimmer:0.5.0'
     api project(path: ':base_ui')
     api project(path: ':domain')
     testImplementation 'junit:junit:4.13.2'
