--- a/features/movie/src/main/AndroidManifest.xml
+++ b/features/movie/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         <dist:delivery>
             <dist:install-time />
         </dist:delivery>
+
         <dist:fusing dist:include="false" />
     </dist:module>
+
+    <application>
+        <activity
+            android:name=".ui.activities.DetailActivity"
+            android:exported="false" />
+    </application>
+
 </manifest>
