--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+
 }
 
 android {
@@ -36,4 +38,6 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     api "io.insert-koin:koin-android:3.1.5"
+    api "androidx.paging:paging-runtime-ktx:3.1.1"
+
 }
