--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -8,6 +8,8 @@ android {
     defaultConfig {
         minSdk 23
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BASE_IMAGE_URL", "\"https://image.tmdb.org/t/p/w500/\""
+
     }
 
     buildTypes {
