--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'com.github.bumptech.glide:glide:4.13.0'
     api 'com.facebook.shimmer:shimmer:0.5.0'
+    api 'com.airbnb.android:lottie:3.5.0'
+
     api project(path: ':base_ui')
     api project(path: ':domain')
     implementation project(path: ':data')
