--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,12 +54,12 @@ dependencies {
     api project(path: ':domain')
     implementation project(path: ':data')
 
-    api 'junit:junit:4.13.2'
-    api 'io.mockk:mockk:1.11.0'
-    api 'org.mockito:mockito-inline:3.11.2'
-    api 'org.mockito:mockito-core:3.11.2'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
-    api 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'io.mockk:mockk:1.11.0'
+    testImplementation 'org.mockito:mockito-inline:3.11.2'
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
