--- a/features/movie/build.gradle
+++ b/features/movie/build.gradle
@@ -24,4 +24,10 @@ android {
 dependencies {
     implementation project(":app")
 
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'io.mockk:mockk:1.11.0'
+    testImplementation 'org.mockito:mockito-inline:3.11.2'
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
